--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -1,6 +1,6 @@
-langchain-openai=="^0.1.8"
-langchain-core=="^0.2.5"
-python-dotenv=="^1.0.1"
-langchain_experimental=="^0.0.60"
-langgraph=="^0.0.66"
-langchain=="^0.2.3"
+langchain-openai==0.1.8
+langchain-core==0.2.5
+python-dotenv==1.0.1
+langchain_experimental==0.0.60
+langgraph==0.0.66
+langchain==0.2.3
